<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="SensorBrands" Id="{e16e2574-da8b-4331-a958-6e9cec9e41c8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE SensorBrands :
(
 	Sick := 0,
	Pilz := 1,
	Parker := 2,
	Bosch := 3	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>